# wavelet-research-framework

./: .gitignore  IMPLEMENTATION_REPORT.md  README.md  pyproject.toml  requirements.txt  setup.py
.devin/workflows/: PYTHON_DEVELOPER_AGENT.md
ai_docs/: DEVELOPER_AGENT_NOTE.md  REMAINING_ROADMAP.md  REMAINING_STORIES_INDEX.md
ai_docs/STORIES/: 1.story.md  16.story.md  17.story.md  19_trend_research.story.md  1a.story.md  20_trend.story.md  WAVELET_RESEARCH_FIX_STORY_01.md  WAVELET_RESEARCH_STORY_03.md  WAVELET_RESEARCH_STORY_04.md  WAVELET_RESEARCH_STORY_05.md  (+23 more)
data/: ticks_sample.csv
mql5/: WaveletBridgeEA.mq5  WaveletOscillator.mq5  WaveletSignalPanel.mq5  WaveletThinIndicator.mq5
tests/: test_backtest.py  test_cli_inspect_ticks.py  test_cli_research.py  test_engine.py  test_ingestion.py  test_mt5_ea.py  test_mt5_indicator.py  test_mt5_indicator_client.py  test_optimizer.py  test_orchestrator.py  test_paper_trading.py  test_profiling.py  test_research.py  test_research_assistant.py  test_service.py  test_service_contract.py  test_signal.py  test_smoke.py  test_story_18_trend_quality.py  test_story_19_deviation.py  test_story_19_trend_modes.py  test_story_20_calibration.py  test_story_20_deviation_stats.py  test_story_21_filters.py  test_story_22_entry_rules.py  test_story_23_exit_rules.py  test_story_24_to_29.py  test_story_bridge_architecture.py  test_validation.py
wavelet_research/: backtester.py  cli.py  cli_inspect_ticks.py  cli_research.py  data.py  signals.py  wavelet_engine.py
wavelet_research.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+99 files in other folders)
